5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1758_1580.log
== TEST (2019-05-29 02:10:41) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>=0):
		media = sum(nots >=0)/size(nots!=-1)
	top = 2

print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:12:48) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>=0):
		media = sum(nots >=0)/size(nots!=-1)
	top = 2
	i = i + 1

print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:13:13) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	media = sum(nots >=0)/size(nots!=-1)
	top = 2
	i = i + 1

print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:15:57) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	media = sum(nots >=0)/(size(nots)-faltosos)
	top = 2
	i = i + 1

print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:25:48) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>0):
		som = som + nots[i]
	a = max(nots)
	elif(a == nots[i])
	top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
File "XXXX", line 20
    elif(a == nots[i])
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:26:32) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>0):
		som = som + nots[i]
	a = max(nots)
	elif(a == nots[i]):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
File "XXXX", line 20
    elif(a == nots[i]):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:27:49) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>0):
		som = som + nots[i]
	elif(max(nots) == nots[i]):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:31:01) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>=0):
		som = som + nots[i]
	elif(max(nots) == nots[i]):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:31:03) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>=0):
		som = som + nots[i]
	elif(max(nots) == nots[i]):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 02:31:44) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>=0):
		som = som + nots[i]
	elif(max(nots) == nots[i]):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:02:43) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>=0):
		som = som + nots[i]
	elif(max(nots) == nots[i]):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:06:22) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>=0):
		som = som + nots[i]
	elif(max(nots) == nots[i]):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:06:36) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>=0):
		som = som + nots[i]
	elif(max(nots) == nots[i]):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:08:21) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	elif(nots[i]>=6):
		aprov = aprov + 1
	elif(nots[i]<6):
		reprov = reprov +1
	elif(nots[i]>=0):
		som = som + nots[i]
	i = i + 1
top = 0
media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:12:49) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	if(nots[i]>=6):
		aprov = aprov + 1
	if(nots[i]<6):
		reprov = reprov +1
	if(nots[i]>=0):
		som = som + nots[i]
	if(max(nots)==(nots[i])):
		top = aluno[i]
	i = i + 1
top = 0
media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:12:51) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	if(nots[i]>=6):
		aprov = aprov + 1
	if(nots[i]<6):
		reprov = reprov +1
	if(nots[i]>=0):
		som = som + nots[i]
	if(max(nots)==(nots[i])):
		top = aluno[i]
	i = i + 1
top = 0
media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:12:52) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	if(nots[i]>=6):
		aprov = aprov + 1
	if(nots[i]<6):
		reprov = reprov +1
	if(nots[i]>=0):
		som = som + nots[i]
	if(max(nots)==(nots[i])):
		top = aluno[i]
	i = i + 1
top = 0
media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(media)
print(top)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:14:39) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	if(nots[i]>=6):
		aprov = aprov + 1
	if(nots[i]<6):
		reprov = reprov +1
	if(nots[i]>=0):
		som = som + nots[i]
	if(max(nots)==(nots[i])):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(round(media,2))
print(top)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:14:39) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	if(nots[i]>=6):
		aprov = aprov + 1
	if(nots[i]<6):
		reprov = reprov +1
	if(nots[i]>=0):
		som = som + nots[i]
	if(max(nots)==(nots[i])):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(round(media,2))
print(top)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:14:41) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	if(nots[i]>=6):
		aprov = aprov + 1
	if(nots[i]<6):
		reprov = reprov +1
	if(nots[i]>=0):
		som = som + nots[i]
	if(max(nots)==(nots[i])):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(round(media,2))
print(top)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:14:43) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	if(nots[i]>=6):
		aprov = aprov + 1
	if(nots[i]<6):
		reprov = reprov +1
	if(nots[i]>=0):
		som = som + nots[i]
	if(max(nots)==(nots[i])):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(round(media,2))
print(top)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 20:18:29) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	if(nots[i]>=6):
		aprov = aprov + 1
	if(nots[i]<6)and(nots[i]>0):
		reprov = reprov +1
	if(nots[i]>=0):
		som = som + nots[i]
	if(max(nots)==(nots[i])):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(round(media,2))
print(top)

-- EXECUTION TIME:
0.370576
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 20:18:55) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	if(nots[i]>=6):
		aprov = aprov + 1
	if(nots[i]<6)and(nots[i]>0):
		reprov = reprov +1
	if(nots[i]>=0):
		som = som + nots[i]
	if(max(nots)==(nots[i])):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(round(media,2))
print(top)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 20:20:55) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	if(nots[i]>=6):
		aprov = aprov + 1
	if(nots[i]<6)and(nots[i]>0):
		reprov = reprov +1
	if(nots[i]>=0):
		som = som + nots[i]
	if(max(nots)==(nots[i])):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(round(media,2))
print(top)

-- EXECUTION TIME:
0.504394
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
3
6.39
HELOISA
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 20:21:33) 
-- CODE:
from numpy import*
nots = array(eval(input("notas: ")))
aluno = array(eval(input("nome aluno: ")))

i = 0
faltosos = 0
aprov = 0
reprov = 0
som = 0
while(i<size(nots)):
	if(nots[i] == -1):
		faltosos = faltosos + 1
	if(nots[i]>=6):
		aprov = aprov + 1
	if(nots[i]<6)and(nots[i]!=-1):
		reprov = reprov +1
	if(nots[i]>=0):
		som = som + nots[i]
	if(max(nots)==(nots[i])):
		top = aluno[i]
	i = i + 1

media = som/(size(nots) - faltosos)
print(faltosos)
print(aprov)
print(reprov)
print(round(media,2))
print(top)

-- EXECUTION TIME:
0.340522
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
